ServerHosting/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: josephbaruch-service
spec:
  selector:
    app: josephbaruch
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8084
  type: LoadBalancer
