ServerHosting/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: josephbaruch-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: josephbaruch
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: josephbaruch-service
            port:
              number: 8009
